--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
      
     <section class="container">
-        <h1>Gerador de Senhas <br><span>Aletórias</span></h1>
+        <h1>Gerador de <br><span>Password</span></h1>
        <div class="display">
             <input type="text" id="fpass" placeholder="Password">
             <img src="images/copy.png" onclick="copyPass()">
